[package]
name = "auction_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
base64 = "0.22.1"
byteorder = "1.5.0"
quartz_nbt = "0.2.9"


